fix: don't send notification emails to disabled users
Signed-off-by: Morten Svanaes <msvanaes@dhis2.org>